changed dockerfile and nginx.conf in frontend to fix the ecs service creation error

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,11 @@ FROM node:18-alpine AS build
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
-
 RUN npm ci
 
+# Copy ALL source files including vite.config.ts
 COPY . .
 
 RUN npm run build
@@ -14,7 +15,7 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 
-# FIX: Change from /app/build to /app/dist
+# Vite creates 'dist' directory, not 'build'
 COPY --from=build /app/dist /usr/share/nginx/html
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
