--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,17 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "@aws-sdk/client-bedrock-runtime": "^3.917.0",
     "@aws-sdk/client-dynamodb": "^3.914.0",
+    "@aws-sdk/client-lambda": "^3.917.0",
     "@aws-sdk/lib-dynamodb": "^3.914.0",
     "aws-sdk": "^2.1692.0",
-    "uuid": "^9.0.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
